--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,11 @@ jobs:
         with:
           dotnet-version: 8.0.x
       - name: Restore dependencies
-        working-directory: /src
+        working-directory: ./src
         run: dotnet restore
       - name: Build
-        working-directory: /src
+        working-directory: ./src
         run: dotnet build --configuration Release --no-restore
       - name: Test
-        working-directory: /src
+        working-directory: ./src
         run: dotnet test --configuration Release --no-build --verbosity normal
