--- a/src/Apollo.Core/Apollo.Core.csproj
+++ b/src/Apollo.Core/Apollo.Core.csproj
@@ -4,12 +4,18 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Authors>mavanmanen</Authors>
+        <Copyright>mavanmanen</Copyright>
+        <PackageProjectUrl>https://github.com/mavanmanen/Apollo</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/mavanmanen/Apollo/blob/main/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/mavanmanen/Apollo</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     </ItemGroup>
 
