--- a/src/Apollo.Handling/Apollo.Handling.csproj
+++ b/src/Apollo.Handling/Apollo.Handling.csproj
@@ -4,6 +4,13 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Authors>mavanmanen</Authors>
+        <Copyright>mavanmanen</Copyright>
+        <PackageProjectUrl>https://github.com/mavanmanen/Apollo</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/mavanmanen/Apollo/blob/main/LICENSE</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/mavanmanen/Apollo</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,7 +20,6 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
       <PackageReference Include="RestSharp" Version="110.2.0" />
-      <PackageReference Include="RestSharp.Serializers.NewtonsoftJson" Version="110.2.0" />
     </ItemGroup>
 
     <ItemGroup>
