--- a/src/Apollo.Handling/Apollo.Handling.csproj
+++ b/src/Apollo.Handling/Apollo.Handling.csproj
@@ -11,6 +11,7 @@
         <RepositoryUrl>https://github.com/mavanmanen/Apollo</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <PackageId>Mavanmanen.Apollo.Handling</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
